refactoring logic for applying for travel // approving travel and rejecting travel.